--- a/react-client/src/style.css
+++ b/react-client/src/style.css
@@ -1,12 +1,40 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+body,html {
+  margin: 0;
+  font-family: 'Titillium Web', sans-serif;
 }
 
-#signup
+#myContainer
 {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
 
+}
+
+.layout
+{
+  height: inherit;
+}
+
+#content
+{
+  width: 100%;
+  display: flex;
+  margin: 5px;
+  padding: 10px;
+  top: 25vh;
+  position: fixed;
+}
+
+.displayLeft
+{
+  width: 50%;
+
+}
+.displayRight
+{
+  width: 50%;
+  text-align: left;
 }
