--- a/react-client/src/style.css
+++ b/react-client/src/style.css
@@ -6,7 +6,7 @@ body,html {
 
 #myContainer
 {
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 100vh;
   background-color: white;
